tests/misc/misc.exp
Error: A.js:13
 13: A.x = A.y;
           ^^^ string [1] is incompatible with boolean [2].
  References:
   12: A.y = "?";
             ^^^ [1]: string
   13: A.x = A.y;
       ^^^ [2]: boolean

Error: A.js:14
 14: f(A.x); // A.x is now a string, by def assign
       ^^^ string. This type is incompatible with the expected param type of
  9: function f(x:boolean) { }
                  ^^^^^^^ boolean

Error: C.js:9
  9:   f(o.b);
           ^ property `b`. Property not found in
  9:   f(o.b);
         ^ new object

Error: C.js:10
 10:   f(o.s);
         ^^^ number. This type is incompatible with the expected param type of
  9: function f(x:boolean) { }
                  ^^^^^^^ boolean. See: A.js:9

Error: D.js:6
  6: function g():string { return this.i; }
                                  ^^^^^^ Cannot return `this.i` because boolean [1] is incompatible with string [2].
  References:
    9: o.i = true;
             ^^^^ [1]: boolean
    6: function g():string { return this.i; }
                    ^^^^^^ [2]: string

Error: D.js:12
 12: f(i);
       ^ string. This type is incompatible with the expected param type of
  9: function f(x:boolean) { }
                  ^^^^^^^ boolean. See: A.js:9

Error: E.js:8
  8: o.fn(false);
          ^^^^^ boolean. This type is incompatible with the expected param type of
  4: function h(x:number) { }
                  ^^^^^^ number

Error: F.js:1
  1: function fn2(x) { return x.length * 4; }
                              ^^^^^^^^ string. The operand of an arithmetic operation must be a number.

Error: F.js:5
  5:   return x.length;
              ^^^^^^^^ Cannot return `x.length` because number [1] is incompatible with string [2].
  References:
  275:     length: number;
                   ^^^^^^ [1]: number. See lib: <BUILTINS>/core.js:275
    4: function foo(x: Array<number>): string {
                                       ^^^^^^ [2]: string

Error: G.js:2
  2: a.length = 123;
                ^^^ number [1] is incompatible with string [2].
  References:
    2: a.length = 123;
                  ^^^ [1]: number
    2: a.length = 123;
       ^^^^^^^^ [2]: string

Error: G.js:3
  3: a.length();
     ^^^^^^^^^^ call of method `length`. Function cannot be called on
  3: a.length();
     ^^^^^^^^^^ number

Error: G.js:6
  6: b.length = "duck";
                ^^^^^^ string [1] is incompatible with number [2].
  References:
    6: b.length = "duck";
                  ^^^^^^ [1]: string
    6: b.length = "duck";
       ^^^^^^^^ [2]: number

Error: G.js:7
  7: b.length();
     ^^^^^^^^^^ call of method `length`. Function cannot be called on
  7: b.length();
     ^^^^^^^^^^ string


Found 13 errors
